# TCP

./: CMakeLists.txt  TCP.code-workspace  main.cpp
include/: Modes.h  TCPClient.h  TCPServer.h
src/: CMakeLists c.txt  Modes.cpp
